VFS-2697 Fixed height uploader with scrollbars

--- a/src/app/styles/components/file-upload.scss
+++ b/src/app/styles/components/file-upload.scss
@@ -1,59 +1,90 @@
+$file-upload-panel-width: 640px;
+$file-upload-panel-height: 240px;
+$file-upload-panel-heading-height: 40px;
+$file-upload-panel-body-height: $file-upload-panel-height - $file-upload-panel-heading-height;
+$file-upload-panel-bottom: 10px;
+$file-upload-panel-right: 15px;
+
+$color-file-upload-panel-top-progress: #525559;
+$color-file-upload-panel-heading-background: #2F333A;
+$color-file-upload-panel-heading-foreground: #FFF;
+$color-file-upload-panel-body-background: #F6F6F6;
+$color-file-upload-panel-separator: #E4E4E4;
+$color-file-upload-panel-progress: #EF3C40;
+$color-file-upload-panel-progress-background: #D7D7D7;
+$color-file-upload-panel-border-width: 2px;
+$color-file-upload-panel-border-radius: 4px;
+
 .panel.file-upload-panel {
   position: fixed;
-  right: 0;
-  // hide border
-  bottom: -1px;
-  width: 400px;
-  margin-right: 15px;
-  margin-bottom: 0px;
-
+  right: $file-upload-panel-right;
+  bottom: $file-upload-panel-bottom;
+  width: $file-upload-panel-width;
+  height: $file-upload-panel-height;
+  margin: 0px;
+  border: $color-file-upload-panel-border-width solid $color-file-upload-panel-heading-background;
+  border-radius: $color-file-upload-panel-border-radius;
+  
   .panel-heading {
+    height: $file-upload-panel-heading-height;
     background-color: $onedata-graphite;
-    color: white;
+    color: $color-file-upload-panel-heading-foreground;
+    border-radius: 0px;
   }
 
   .panel-body {
-    background-color: #F6F6F6;
-  }
-
-  .panel-footer {
-    background-color: #F0F0F0;
+    height: $file-upload-panel-body-height - 2*$color-file-upload-panel-border-width;
+    background-color: $color-file-upload-panel-body-background;
+    overflow-y: auto;
   }
 }
 
 .file-upload-hidden {
   .panel.file-upload-panel {
-    max-height: 0px;
-    transition: max-height 0.5s ease-out;
+    bottom: -$file-upload-panel-bottom - $file-upload-panel-height;
+    transition: bottom .25s ease-out;
   }
 }
 
 .file-upload-visible {
   .panel.file-upload-panel {
-    max-height: 50%;
-    transition: max-height 0.5s ease-out;
+    bottom: $file-upload-panel-bottom;
+    transition: bottom .25s ease-out;
   }
 }
 
-// TODO resumablejs
-
-
-/* Uploader: Drag & Drop */
-.resumable-error {display:none; font-size:14px; font-style:italic;}
-.resumable-drop {padding:15px; font-size:13px; text-align:center; color:#666; font-weight:bold;background-color:#eee; border:2px dashed #aaa; border-radius:10px; margin-top:40px; z-index:9999; display:none;}
-.resumable-dragover {padding:30px; color:#555; background-color:#ddd; border:1px solid #999;}
-
 /* Uploader: Progress bar */
-.resumable-progress {margin: 5px 0 15px 0; width:100%;}
-.progress-container {height:7px; background:$color-upload-progress-bg; position:relative; }
-.progress-bar {position:absolute; top:0; left:0; bottom:0; background:$color-upload-progress-fg; width:0;}
-.progress-text {font-size:11px; line-height:9px; padding-left:10px;}
-.is-paused .progress-resume-link {display:inline;}
+.resumable-progress {
+  margin: 5px 0 15px 0; 
+  width: 100%;
+  table {
+    width: 100%;
+  }
+}
+.progress-container {
+  height: 7px;
+  background: $color-upload-progress-bg;
+  position: relative;
+}
+
+.progress-bar {
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  background: $color-upload-progress-fg;
+  width:0;
+}
+
+.progress-text {
+  font-size: 11px;
+  line-height: 9px;
+  padding-left: 10px;
+  width: 40px;
+  text-align: right;
+}
 
 /* Uploader: List of items being uploaded */
-.resumable-list {overflow:auto; margin-right:-20px;}
-
-/* Uploader: Error status */
-.is-error .uploader-item:hover, .is-active.is-error .uploader-item {border-color:#900;}
-.is-error .uploader-item:hover .uploader-item-title, .is-active.is-error .uploader-item .uploader-item-title {background-color:rgba(153,0,0,0.6);}
-.is-error .uploader-item-creating-thumbnail {display:none;}
+.resumable-list {
+  overflow: auto;
+}
